chore: cleanup & fixes